--- a/app/public/index.html
+++ b/app/public/index.html
@@ -22,6 +22,24 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+  <script data-ad-client="ca-pub-7462295674983506" async
+    src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <script async src="//pagead2.googlesyndication.com/
+      pagead/js/adsbygoogle.js"></script>
+  <script>
+    (adsbygoogle = window.adsbygoogle || []).push({
+      google_ad_client: "pub-7462295674983506",
+      enable_page_level_ads: true
+    });
+  </script>
+  <script async src="//pagead2.googlesyndication.com/
+      pagead/js/adsbygoogle.js"></script>
+  <script>
+    (adsbygoogle = window.adsbygoogle || []).push({
+      google_ad_client: "pub-7462295674983506",
+      enable_page_level_ads: true
+    });
+  </script>
   <title>Forbes400</title>
 </head>
 
@@ -49,8 +67,6 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"
     integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ"
     crossorigin="anonymous"></script>
-  <script data-ad-client="ca-pub-7462295674983506" async
-    src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   <script>
     window['_fs_debug'] = false;
     window['_fs_host'] = 'fullstory.com';
